# data-mastery-1.1-premiers-pas

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
data/: capteurs_temperature.csv  consommation_energie.csv  export_gtc_brut.csv  export_gtc_propre.csv  generate_data.py  generate_gtc_data.py  production_industrielle.csv
exercices/: exercice_1_CORRECTION.ipynb  exercice_1_ENONCE.ipynb  exercice_2_CORRECTION.ipynb  exercice_2_ENONCE.ipynb  exercice_3_CORRECTION.ipynb  exercice_3_ENONCE.ipynb
notebooks/: 01_explorer_les_donnees.ipynb  01_introduction_claude_code.ipynb  02_installation_configuration.ipynb  03_premier_graphique.ipynb  04_comprendre_dialogue.ipynb  05_cas_etude_energie.ipynb
notebooks/reference/: 04_comprendre_claude.ipynb  05_cas_etude_energie.ipynb
